--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="LinkedIn" />
     <span>LinkedIn</span>
   </div>
-  <div class="peg">
+  <div class="peg"id="calculator">
     <img src="https://img.icons8.com/fluency/48/000000/calculator.png" alt="Calculator" />
     <span>Calculator</span>
   </div>
